--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -146,14 +146,18 @@ main {
       height: 20px;
       letter-spacing: -0.22px;
       line-height: 20px;
-      padding-top: 0.8rem;
-      padding-bottom: 0.8rem;
+      padding-top: 0.6rem;
+      padding-bottom: 0.6rem;
       width: 56px;
     }
 
     td {
       letter-spacing: -0.4px;
       white-space: nowrap;
+
+      img {
+        margin-bottom: 2px;
+      }
     }
 
     small {
@@ -165,8 +169,31 @@ main {
   }
 }
 
-.table>:not(caption)>*>* {
+.table > :not(caption) > * > * {
   padding: .6rem 1.5rem .5rem 1.5rem;
+}
+
+/* --------------------------- */
+
+/* BUTTONS */
+
+.toolbar .btn {
+  background-color: #ffffff;
+  border: 1px solid #dedfe3;
+  border-radius: 3px;
+
+  &.square {
+    height: 32px;
+    padding: 4px;
+    width: 32px;
+  }
+}
+
+.btn {
+  &.no-bg {
+    background-color: transparent;
+    border: 0;
+  }
 }
 
 /* --------------------------- */
@@ -204,6 +231,26 @@ main {
   }
 }
 
+.date.input-group {
+  width: 132px;
+
+  .input-group-text {
+    background-color: #ffffff;
+    border-radius: 2px;
+    border-right: 0;
+    border-color: #dedfe3;
+    padding: 8px 8px 8px 12px;
+  }
+
+  .form-control {
+    border: 1px solid rgb(222, 223, 227);
+    border-left: 0;
+    letter-spacing: -0.4px;
+    margin-left: 0;
+    padding-left: 0;
+  }
+}
+
 .dropdown-select {
   .btn {
     background-color: #fff;
@@ -211,6 +258,74 @@ main {
     font-size: 1rem;
     letter-spacing: -0.4px;
     line-height: 24px;
+  }
+}
+
+.bootstrap-select {
+  .btn:focus {
+    box-shadow: none;
+  }
+
+  .dropdown-toggle {
+    border: 1px solid #dedfe3;
+    border-radius: 2px;
+    background-color: #fff;
+    padding: 4px 8px;
+
+    &.bs-placeholder {
+
+    }
+
+    &:focus {
+      outline: 3px solid #c2c2c6 !important;
+      box-shadow: 0 0 0 2px #1b72e8;
+    }
+
+    &:after {
+      background : url(../img/dropdown_arrow_down.svg) no-repeat;
+      border: 0;
+      content : "";
+      height: 16px;
+      margin-right: 4px;
+      width: 18px;
+    }
+
+    .filter-option-inner:before {
+      color: #74787b;
+      content: 'View';
+      display: inline-block;
+      margin-right: 8px;
+    }
+
+    .filter-option-inner-inner {
+      display: inline;
+    }
+  }
+
+  .dropdown-menu {
+    border: 0;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    padding: 16px 0;
+
+    .selected {
+      &.active {
+        background-color: #fff;
+        color: #1d1d1d;
+        font-weight: bold;
+
+        .check-mark {
+          background : url(../img/check.svg) no-repeat;
+          color: #1b72e8;
+          font-size: 0;
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
+
+    .dropdown-item {
+      padding: 4px 12px;
+    }
   }
 }
 
@@ -256,4 +371,13 @@ main {
     padding: 8px 12px;
     text-align: left;
   }
+}
+
+/* --------------------------- */
+
+/* TOOLTIP */
+
+.paginator {
+  font-size: .9rem;
+  font-weight: 500;
 }
